# ClearpathMMP-amcl-gmapping-move_base-pollution_mapping

./: CMakeLists.txt  CMakeLists.txt~  jkulz5qs.aub.txt  package.xml  package.xml~  readme.txt
config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
launch/: amcl_mmp.launch  gmapping_mmp.launch  move_base.launch  pmapping.launch  view_mmp.launch
launch/includes/: amcl.launch.xml  gmapping.launch.xml
maps/: lab_07_15.pgm  lab_07_15.yaml  pollution_lab.pgm  pollution_lab.yaml
nodes/: odom_ekf.py  pmapping.cpp  pmapping.cpp~  tmp_mq.cpp  tmp_mq.cpp~
rviz/: mmp.rviz
urdf/: mmp.urdf
